--- a/notebooks/yelp_foursquare_EDA.ipynb
+++ b/notebooks/yelp_foursquare_EDA.ipynb
@@ -2,11 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# imports"
+    "import requests\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "foursquare_api_key = os.environ['FOURSQUARE_STATS_API_KEY']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%store -r lat_lon"
    ]
   },
   {
@@ -25,16 +53,559 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Distance</th>\n",
+       "      <th>Popularity</th>\n",
+       "      <th>Rating</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>53.350230</td>\n",
+       "      <td>-6.279696</td>\n",
+       "      <td>0                     V-Face\n",
+       "1            The ...</td>\n",
+       "      <td>0     37\n",
+       "1    131\n",
+       "2    165\n",
+       "3    177\n",
+       "4    235\n",
+       "5...</td>\n",
+       "      <td>0    0.962323\n",
+       "1    0.989574\n",
+       "2    0.982433\n",
+       "3   ...</td>\n",
+       "      <td>0    NaN\n",
+       "1    8.4\n",
+       "2    6.7\n",
+       "3    9.1\n",
+       "4    NaN\n",
+       "5...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>53.357841</td>\n",
+       "      <td>-6.251557</td>\n",
+       "      <td>0                Bridge Tavern\n",
+       "1              ...</td>\n",
+       "      <td>0    171\n",
+       "1    210\n",
+       "2    222\n",
+       "3    321\n",
+       "4    339\n",
+       "5...</td>\n",
+       "      <td>0    0.972521\n",
+       "1    0.941013\n",
+       "2    0.979005\n",
+       "3   ...</td>\n",
+       "      <td>0    NaN\n",
+       "1    NaN\n",
+       "2    7.8\n",
+       "3    NaN\n",
+       "4    8.7\n",
+       "5...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>53.356307</td>\n",
+       "      <td>-6.273717</td>\n",
+       "      <td>0          McGowan's\n",
+       "1          Cumiskeys\n",
+       "2   ...</td>\n",
+       "      <td>0     46\n",
+       "1    216\n",
+       "2    252\n",
+       "3    404\n",
+       "4    516\n",
+       "5...</td>\n",
+       "      <td>0    0.949326\n",
+       "1    0.972920\n",
+       "2    0.965294\n",
+       "3   ...</td>\n",
+       "      <td>0    6.8\n",
+       "1    NaN\n",
+       "2    8.7\n",
+       "3    NaN\n",
+       "4    8.0\n",
+       "5...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>53.349562</td>\n",
+       "      <td>-6.278198</td>\n",
+       "      <td>0            The Cobblestone\n",
+       "1            Osca...</td>\n",
+       "      <td>0     35\n",
+       "1     79\n",
+       "2    109\n",
+       "3    137\n",
+       "4    155\n",
+       "5...</td>\n",
+       "      <td>0    0.989574\n",
+       "1    0.982433\n",
+       "2    0.988945\n",
+       "3   ...</td>\n",
+       "      <td>0    8.4\n",
+       "1    6.7\n",
+       "2    9.1\n",
+       "3    NaN\n",
+       "4    NaN\n",
+       "5...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>53.336021</td>\n",
+       "      <td>-6.262980</td>\n",
+       "      <td>0                    Dicey's Garden\n",
+       "1         ...</td>\n",
+       "      <td>0     67\n",
+       "1    102\n",
+       "2    167\n",
+       "3    172\n",
+       "4    173\n",
+       "5...</td>\n",
+       "      <td>0    0.992545\n",
+       "1    0.979976\n",
+       "2    0.985175\n",
+       "3   ...</td>\n",
+       "      <td>0    7.5\n",
+       "1    8.9\n",
+       "2    NaN\n",
+       "3    7.8\n",
+       "4    7.8\n",
+       "5...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>53.359405</td>\n",
+       "      <td>-6.276142</td>\n",
+       "      <td>0    Clarkes Phibsboro House\n",
+       "1            Phib...</td>\n",
+       "      <td>0    191\n",
+       "1    196\n",
+       "2    204\n",
+       "3    218\n",
+       "4    245\n",
+       "5...</td>\n",
+       "      <td>0         NaN\n",
+       "1    0.907678\n",
+       "2    0.900908\n",
+       "3   ...</td>\n",
+       "      <td>0    NaN\n",
+       "1    NaN\n",
+       "2    NaN\n",
+       "3    8.7\n",
+       "4    NaN\n",
+       "5...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>53.337960</td>\n",
+       "      <td>-6.241530</td>\n",
+       "      <td>0                     Starbucks\n",
+       "1             ...</td>\n",
+       "      <td>0    177\n",
+       "1    192\n",
+       "2    215\n",
+       "3    273\n",
+       "4    340\n",
+       "5...</td>\n",
+       "      <td>0    0.938414\n",
+       "1    0.937557\n",
+       "2    0.992773\n",
+       "3   ...</td>\n",
+       "      <td>0    6.7\n",
+       "1    NaN\n",
+       "2    9.0\n",
+       "3    6.4\n",
+       "4    7.3\n",
+       "5...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>53.343368</td>\n",
+       "      <td>-6.270120</td>\n",
+       "      <td>0                   Bittersweet\n",
+       "1            B...</td>\n",
+       "      <td>0     93\n",
+       "1    215\n",
+       "2    217\n",
+       "3    224\n",
+       "4    245\n",
+       "5...</td>\n",
+       "      <td>0    0.969007\n",
+       "1    0.994915\n",
+       "2    0.991859\n",
+       "3   ...</td>\n",
+       "      <td>0    6.4\n",
+       "1    NaN\n",
+       "2    7.5\n",
+       "3    6.8\n",
+       "4    7.5\n",
+       "5...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>53.334123</td>\n",
+       "      <td>-6.265436</td>\n",
+       "      <td>0                The Bleeding Horse\n",
+       "1         ...</td>\n",
+       "      <td>0     67\n",
+       "1    159\n",
+       "2    160\n",
+       "3    167\n",
+       "4    192\n",
+       "5...</td>\n",
+       "      <td>0    0.988460\n",
+       "1    0.987289\n",
+       "2    0.982118\n",
+       "3   ...</td>\n",
+       "      <td>0    7.4\n",
+       "1    7.8\n",
+       "2    8.9\n",
+       "3    8.9\n",
+       "4    6.7\n",
+       "5...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>53.344304</td>\n",
+       "      <td>-6.250427</td>\n",
+       "      <td>0                       Bread 41\n",
+       "1            ...</td>\n",
+       "      <td>0     97\n",
+       "1    245\n",
+       "2    290\n",
+       "3    314\n",
+       "4    341\n",
+       "5...</td>\n",
+       "      <td>0    0.990174\n",
+       "1    0.970293\n",
+       "2    0.985518\n",
+       "3   ...</td>\n",
+       "      <td>0    8.3\n",
+       "1    7.6\n",
+       "2    7.6\n",
+       "3    8.4\n",
+       "4    NaN\n",
+       "5...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Latitude  Longitude                                               Name  \\\n",
+       "0  53.350230  -6.279696  0                     V-Face\n",
+       "1            The ...   \n",
+       "1  53.357841  -6.251557  0                Bridge Tavern\n",
+       "1              ...   \n",
+       "2  53.356307  -6.273717  0          McGowan's\n",
+       "1          Cumiskeys\n",
+       "2   ...   \n",
+       "3  53.349562  -6.278198  0            The Cobblestone\n",
+       "1            Osca...   \n",
+       "4  53.336021  -6.262980  0                    Dicey's Garden\n",
+       "1         ...   \n",
+       "5  53.359405  -6.276142  0    Clarkes Phibsboro House\n",
+       "1            Phib...   \n",
+       "6  53.337960  -6.241530  0                     Starbucks\n",
+       "1             ...   \n",
+       "7  53.343368  -6.270120  0                   Bittersweet\n",
+       "1            B...   \n",
+       "8  53.334123  -6.265436  0                The Bleeding Horse\n",
+       "1         ...   \n",
+       "9  53.344304  -6.250427  0                       Bread 41\n",
+       "1            ...   \n",
+       "\n",
+       "                                            Distance  \\\n",
+       "0  0     37\n",
+       "1    131\n",
+       "2    165\n",
+       "3    177\n",
+       "4    235\n",
+       "5...   \n",
+       "1  0    171\n",
+       "1    210\n",
+       "2    222\n",
+       "3    321\n",
+       "4    339\n",
+       "5...   \n",
+       "2  0     46\n",
+       "1    216\n",
+       "2    252\n",
+       "3    404\n",
+       "4    516\n",
+       "5...   \n",
+       "3  0     35\n",
+       "1     79\n",
+       "2    109\n",
+       "3    137\n",
+       "4    155\n",
+       "5...   \n",
+       "4  0     67\n",
+       "1    102\n",
+       "2    167\n",
+       "3    172\n",
+       "4    173\n",
+       "5...   \n",
+       "5  0    191\n",
+       "1    196\n",
+       "2    204\n",
+       "3    218\n",
+       "4    245\n",
+       "5...   \n",
+       "6  0    177\n",
+       "1    192\n",
+       "2    215\n",
+       "3    273\n",
+       "4    340\n",
+       "5...   \n",
+       "7  0     93\n",
+       "1    215\n",
+       "2    217\n",
+       "3    224\n",
+       "4    245\n",
+       "5...   \n",
+       "8  0     67\n",
+       "1    159\n",
+       "2    160\n",
+       "3    167\n",
+       "4    192\n",
+       "5...   \n",
+       "9  0     97\n",
+       "1    245\n",
+       "2    290\n",
+       "3    314\n",
+       "4    341\n",
+       "5...   \n",
+       "\n",
+       "                                          Popularity  \\\n",
+       "0  0    0.962323\n",
+       "1    0.989574\n",
+       "2    0.982433\n",
+       "3   ...   \n",
+       "1  0    0.972521\n",
+       "1    0.941013\n",
+       "2    0.979005\n",
+       "3   ...   \n",
+       "2  0    0.949326\n",
+       "1    0.972920\n",
+       "2    0.965294\n",
+       "3   ...   \n",
+       "3  0    0.989574\n",
+       "1    0.982433\n",
+       "2    0.988945\n",
+       "3   ...   \n",
+       "4  0    0.992545\n",
+       "1    0.979976\n",
+       "2    0.985175\n",
+       "3   ...   \n",
+       "5  0         NaN\n",
+       "1    0.907678\n",
+       "2    0.900908\n",
+       "3   ...   \n",
+       "6  0    0.938414\n",
+       "1    0.937557\n",
+       "2    0.992773\n",
+       "3   ...   \n",
+       "7  0    0.969007\n",
+       "1    0.994915\n",
+       "2    0.991859\n",
+       "3   ...   \n",
+       "8  0    0.988460\n",
+       "1    0.987289\n",
+       "2    0.982118\n",
+       "3   ...   \n",
+       "9  0    0.990174\n",
+       "1    0.970293\n",
+       "2    0.985518\n",
+       "3   ...   \n",
+       "\n",
+       "                                              Rating  \n",
+       "0  0    NaN\n",
+       "1    8.4\n",
+       "2    6.7\n",
+       "3    9.1\n",
+       "4    NaN\n",
+       "5...  \n",
+       "1  0    NaN\n",
+       "1    NaN\n",
+       "2    7.8\n",
+       "3    NaN\n",
+       "4    8.7\n",
+       "5...  \n",
+       "2  0    6.8\n",
+       "1    NaN\n",
+       "2    8.7\n",
+       "3    NaN\n",
+       "4    8.0\n",
+       "5...  \n",
+       "3  0    8.4\n",
+       "1    6.7\n",
+       "2    9.1\n",
+       "3    NaN\n",
+       "4    NaN\n",
+       "5...  \n",
+       "4  0    7.5\n",
+       "1    8.9\n",
+       "2    NaN\n",
+       "3    7.8\n",
+       "4    7.8\n",
+       "5...  \n",
+       "5  0    NaN\n",
+       "1    NaN\n",
+       "2    NaN\n",
+       "3    8.7\n",
+       "4    NaN\n",
+       "5...  \n",
+       "6  0    6.7\n",
+       "1    NaN\n",
+       "2    9.0\n",
+       "3    6.4\n",
+       "4    7.3\n",
+       "5...  \n",
+       "7  0    6.4\n",
+       "1    NaN\n",
+       "2    7.5\n",
+       "3    6.8\n",
+       "4    7.5\n",
+       "5...  \n",
+       "8  0    7.4\n",
+       "1    7.8\n",
+       "2    8.9\n",
+       "3    8.9\n",
+       "4    6.7\n",
+       "5...  \n",
+       "9  0    8.3\n",
+       "1    7.6\n",
+       "2    7.6\n",
+       "3    8.4\n",
+       "4    NaN\n",
+       "5...  "
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def foursquare_request(latitude, longitude):\n",
+    "    url = \"https://api.foursquare.com/v3/places/search\"\n",
+    "    params = {\n",
+    "        # retrieve latitude and longitude from list of bike station location coordinates, and convert to string\n",
+    "        \"ll\": f\"{latitude},{longitude}\",\n",
+    "        \"radius\": 1000,\n",
+    "        \"categories\": \"13000, 19028, 19043\", # search for dining and drinking, bus stops, and tourist information and service\n",
+    "        \"sort\": \"DISTANCE\",\n",
+    "        \"fields\": \"name,distance,popularity,rating\" \n",
+    "    }\n",
+    "\n",
+    "    headers = {\n",
+    "        \"Accept\": \"application/json\",\n",
+    "        \"Authorization\": f\"{foursquare_api_key}\"\n",
+    "    }\n",
+    "\n",
+    "    foursquare_result = requests.request(\"GET\", url, params=params, headers=headers)\n",
+    "\n",
+    "    return foursquare_result.json()\n",
+    "\n",
+    "# create empty list to contain a dataframe for each location's associated information\n",
+    "final_location_data_list = []\n",
+    "\n",
+    "# iterate through bike station locations\n",
+    "for location in lat_lon:\n",
+    "    latitude = location[0]\n",
+    "    longitude = location[1]\n",
+    "    result = foursquare_request(latitude, longitude) # assign location json results to a variable\n",
+    "    data = result.get('results') # extract data located in the 'results' header of the json file\n",
+    "    foursquare_df = pd.DataFrame(data) # convert location results to a pandas dataframe\n",
+    "    final_location_data_list.append({\n",
+    "        'Latitude': latitude,\n",
+    "        'Longitude': longitude,\n",
+    "        'Name': foursquare_df['name'],\n",
+    "        'Distance': foursquare_df['distance'],\n",
+    "        'Popularity': foursquare_df['popularity'],\n",
+    "        'Rating': foursquare_df['rating']\n",
+    "        }) # add location data to a list of location data\n",
+    "\n",
+    "final_df = pd.DataFrame(final_location_data_list) # convert list of location dataframes to one big dataframe\n",
+    "\n",
+    "final_df.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(114, 6)"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_df.shape"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Parse through the response to get the POI (such as restaurants, bars, etc) details you want (ratings, name, location, etc)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Points of interest:\n",
+    "- coffee shops (13032)\n",
+    "- gift shops (17089)\n",
+    "- brewery (13029)\n",
+    "- tourist information and service (19028)\n",
+    "\n",
+    "POIs that were considered but not included:\n",
+    "- restaurant (13065)\n",
+    "- public bathroom (12092)\n",
+    "- historic and protected site (16020)\n",
+    "- bars (13003)\n",
+    "- souvenir store (17116)\n",
+    "- bus stop (19043)"
    ]
   },
   {
@@ -155,7 +726,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
