--- a/notebooks/city_bikes.ipynb
+++ b/notebooks/city_bikes.ipynb
@@ -2125,14 +2125,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'name': [], 'latitude': [], 'longitude': [], 'free_bikes': []}\n"
+      "{'name': [], 'latitude': [], 'longitude': [], 'free_bikes': [], 'empty_slots': []}\n"
      ]
     }
    ],
@@ -2141,7 +2141,7 @@
     "bikes_dict = {}\n",
     "\n",
     "# identify variables of interest for each station\n",
-    "keys_of_interest = ['name', 'latitude', 'longitude', 'free_bikes']\n",
+    "keys_of_interest = ['name', 'latitude', 'longitude', 'free_bikes', 'empty_slots']\n",
     "for key in keys_of_interest:\n",
     "    bikes_dict[key] = []\n",
     "\n",
@@ -2151,14 +2151,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'name': ['GEORGES LANE', \"NORTH CIRCULAR ROAD (O'CONNELL'S)\", 'PHIBSBOROUGH ROAD', 'SMITHFIELD NORTH', 'CLONMEL STREET', 'AVONDALE ROAD', 'MOUNT STREET LOWER', 'CHRISTCHURCH PLACE', 'GRANTHAM STREET', 'PEARSE STREET', 'YORK STREET EAST', 'EXCISE WALK', 'FITZWILLIAM SQUARE WEST', 'PORTOBELLO ROAD', 'PARNELL STREET', 'FREDERICK STREET SOUTH', 'CUSTOM HOUSE', 'RATHDOWN ROAD', 'HANOVER QUAY', 'OLIVER BOND STREET', 'COLLINS BARRACKS MUSEUM', 'BROOKFIELD ROAD', 'BENSON STREET', 'EARLSFORT TERRACE', 'GOLDEN LANE', 'DEVERELL PLACE', 'WILTON TERRACE (PARK)', 'JOHN STREET WEST', 'FENIAN STREET', 'MERRION SQUARE SOUTH', 'SOUTH DOCK ROAD', 'CITY QUAY', 'EXCHEQUER STREET', 'THE POINT', 'BROADSTONE', 'HATCH STREET', 'LIME STREET', 'CHARLEMONT PLACE', 'KILMAINHAM GAOL', 'HARDWICKE PLACE', 'WOLFE TONE STREET', 'GREEK STREET', 'GUILD STREET', 'HERBERT PLACE', 'HIGH STREET', 'NORTH CIRCULAR ROAD', 'WESTERN WAY', 'TALBOT STREET', 'NEWMAN HOUSE', \"SIR PATRICK DUN'S\", 'NEW CENTRAL BANK', 'GRANGEGORMAN LOWER (CENTRAL)', 'KING STREET NORTH', 'KILLARNEY STREET', 'HERBERT STREET', 'HANOVER QUAY EAST', 'CUSTOM HOUSE QUAY', 'MOLESWORTH STREET', 'GEORGES QUAY', 'KILMAINHAM LANE', 'MOUNT BROWN', 'MARKET STREET SOUTH', 'KEVIN STREET', 'ECCLES STREET EAST', 'GRAND CANAL DOCK', 'MERRION SQUARE EAST', 'YORK STREET WEST', \"ST. STEPHEN'S GREEN SOUTH\", 'DENMARK STREET GREAT', 'ROYAL HOSPITAL', 'HEUSTON STATION (CAR PARK)', 'GRANGEGORMAN LOWER (NORTH)', \"ST. STEPHEN'S GREEN EAST\", 'HEUSTON STATION (CENTRAL)', 'TOWNSEND STREET', 'ECCLES STREET', 'PORTOBELLO HARBOUR', 'MATER HOSPITAL', 'BLESSINGTON STREET', 'JAMES STREET', 'MOUNTJOY SQUARE EAST', 'MERRION SQUARE WEST', 'CONVENTION CENTRE', 'HARDWICKE STREET', 'PARKGATE STREET', 'DAME STREET', 'HEUSTON BRIDGE (SOUTH)', 'CATHAL BRUGHA STREET', 'SANDWITH STREET', 'BUCKINGHAM STREET LOWER', 'ROTHE ABBEY', 'CHARLEVILLE ROAD', \"PRINCES STREET / O'CONNELL STREET\", 'UPPER SHERRARD STREET', 'FITZWILLIAM SQUARE EAST', 'GRATTAN STREET', 'ST JAMES HOSPITAL (LUAS)', 'HARCOURT TERRACE', 'BOLTON STREET', 'JERVIS STREET', 'ORMOND QUAY UPPER', 'GRANGEGORMAN LOWER (SOUTH)', 'MOUNTJOY SQUARE WEST', 'WILTON TERRACE', 'EMMET ROAD', 'HEUSTON BRIDGE (NORTH)', 'LEINSTER STREET SOUTH', 'BLACKHALL PLACE', 'CLARENDON ROW', 'JAMES STREET EAST', 'PARNELL SQUARE NORTH', 'FOWNES STREET UPPER', 'SMITHFIELD', 'FRANCIS STREET'], 'latitude': [53.35023, 53.357841, 53.356307, 53.349562, 53.336021, 53.359405, 53.33796, 53.343368, 53.334123, 53.344304, 53.338755, 53.347777, 53.336074, 53.330091, 53.350929, 53.341515, 53.348279, 53.35893, 53.344115, 53.343893, 53.347477, 53.339005, 53.344153, 53.334295, 53.340803, 53.351464, 53.333653, 53.343105, 53.341428, 53.338614, 53.341833, 53.346637, 53.343034, 53.346867, 53.3547, 53.33403, 53.346026, 53.330662, 53.342113, 53.357043, 53.348875, 53.346874, 53.347932, 53.334432, 53.343565, 53.359624, 53.354929, 53.350974, 53.337132, 53.339218, 53.347122, 53.355173, 53.350291, 53.354845, 53.335742, 53.343653, 53.347884, 53.341288, 53.347508, 53.341805, 53.341645, 53.342296, 53.337757, 53.358115, 53.342638, 53.339434, 53.339334, 53.337494, 53.35561, 53.343897, 53.346985, 53.355954, 53.337824, 53.346603, 53.345922, 53.359246, 53.330362, 53.359967, 53.356769, 53.343456, 53.356717, 53.339764, 53.34744, 53.355473, 53.347972, 53.344007, 53.347106, 53.352149, 53.345203, 53.353331, 53.338776, 53.359157, 53.349013, 53.358437, 53.335211, 53.339629, 53.341359, 53.332763, 53.351182, 53.3483, 53.346057, 53.354663, 53.356299, 53.332383, 53.340714, 53.347802, 53.34218, 53.3488, 53.340927, 53.336597, 53.3537415547453, 53.344603, 53.347692, 53.342081], 'longitude': [-6.279696, -6.251557, -6.273717, -6.278198, -6.26298, -6.276142, -6.24153, -6.27012, -6.265436, -6.250427, -6.262003, -6.244239, -6.252825, -6.268044, -6.265125, -6.256853, -6.254662, -6.280337, -6.237153, -6.280531, -6.28525, -6.300217, -6.233451, -6.258503, -6.267732, -6.255265, -6.248345, -6.277167, -6.24672, -6.248606, -6.231291, -6.246154, -6.263578, -6.230852, -6.272314, -6.260714, -6.243576, -6.260177, -6.310015, -6.263232, -6.267459, -6.272976, -6.240928, -6.245575, -6.275071, -6.260348, -6.269425, -6.25294, -6.26059, -6.240642, -6.234749, -6.278424, -6.273507, -6.247579, -6.24551, -6.231755, -6.248048, -6.258117, -6.252192, -6.305085, -6.29719, -6.287661, -6.267699, -6.265601, -6.238695, -6.246548, -6.264699, -6.26199, -6.261397, -6.29706, -6.297804, -6.278378, -6.256035, -6.296924, -6.254614, -6.269779, -6.265163, -6.264828, -6.26814, -6.287409, -6.256359, -6.251988, -6.238523, -6.264423, -6.291804, -6.266802, -6.292041, -6.260533, -6.247163, -6.249319, -6.30395, -6.281866, -6.260311, -6.260641, -6.2509, -6.243778, -6.292951, -6.257942, -6.269859, -6.266651, -6.268001, -6.278681, -6.258586, -6.252717, -6.308191, -6.292432, -6.254485, -6.281637, -6.262501, -6.248109, -6.26530144781526, -6.263371, -6.278214, -6.275233], 'free_bikes': [11, 30, 22, 21, 5, 29, 3, 1, 16, 14, 0, 30, 2, 30, 2, 11, 16, 26, 8, 12, 10, 26, 2, 0, 4, 16, 2, 3, 9, 8, 21, 6, 0, 9, 2, 1, 3, 39, 34, 3, 11, 5, 7, 0, 2, 23, 2, 12, 8, 0, 8, 0, 0, 30, 1, 7, 7, 0, 8, 8, 17, 16, 8, 0, 8, 7, 7, 8, 9, 35, 36, 4, 0, 40, 12, 11, 28, 17, 3, 23, 16, 1, 3, 6, 37, 0, 23, 3, 19, 28, 27, 33, 0, 25, 0, 0, 30, 11, 13, 15, 9, 1, 22, 10, 28, 40, 18, 14, 0, 0, 2, 14, 22, 9]}\n"
+      "{'name': ['GEORGES LANE', \"NORTH CIRCULAR ROAD (O'CONNELL'S)\", 'PHIBSBOROUGH ROAD', 'SMITHFIELD NORTH', 'CLONMEL STREET', 'AVONDALE ROAD', 'MOUNT STREET LOWER', 'CHRISTCHURCH PLACE', 'GRANTHAM STREET', 'PEARSE STREET', 'YORK STREET EAST', 'EXCISE WALK', 'FITZWILLIAM SQUARE WEST', 'PORTOBELLO ROAD', 'PARNELL STREET', 'FREDERICK STREET SOUTH', 'CUSTOM HOUSE', 'RATHDOWN ROAD', 'HANOVER QUAY', 'OLIVER BOND STREET', 'COLLINS BARRACKS MUSEUM', 'BROOKFIELD ROAD', 'BENSON STREET', 'EARLSFORT TERRACE', 'GOLDEN LANE', 'DEVERELL PLACE', 'WILTON TERRACE (PARK)', 'JOHN STREET WEST', 'FENIAN STREET', 'MERRION SQUARE SOUTH', 'SOUTH DOCK ROAD', 'CITY QUAY', 'EXCHEQUER STREET', 'THE POINT', 'BROADSTONE', 'HATCH STREET', 'LIME STREET', 'CHARLEMONT PLACE', 'KILMAINHAM GAOL', 'HARDWICKE PLACE', 'WOLFE TONE STREET', 'GREEK STREET', 'GUILD STREET', 'HERBERT PLACE', 'HIGH STREET', 'NORTH CIRCULAR ROAD', 'WESTERN WAY', 'TALBOT STREET', 'NEWMAN HOUSE', \"SIR PATRICK DUN'S\", 'NEW CENTRAL BANK', 'GRANGEGORMAN LOWER (CENTRAL)', 'KING STREET NORTH', 'KILLARNEY STREET', 'HERBERT STREET', 'HANOVER QUAY EAST', 'CUSTOM HOUSE QUAY', 'MOLESWORTH STREET', 'GEORGES QUAY', 'KILMAINHAM LANE', 'MOUNT BROWN', 'MARKET STREET SOUTH', 'KEVIN STREET', 'ECCLES STREET EAST', 'GRAND CANAL DOCK', 'MERRION SQUARE EAST', 'YORK STREET WEST', \"ST. STEPHEN'S GREEN SOUTH\", 'DENMARK STREET GREAT', 'ROYAL HOSPITAL', 'HEUSTON STATION (CAR PARK)', 'GRANGEGORMAN LOWER (NORTH)', \"ST. STEPHEN'S GREEN EAST\", 'HEUSTON STATION (CENTRAL)', 'TOWNSEND STREET', 'ECCLES STREET', 'PORTOBELLO HARBOUR', 'MATER HOSPITAL', 'BLESSINGTON STREET', 'JAMES STREET', 'MOUNTJOY SQUARE EAST', 'MERRION SQUARE WEST', 'CONVENTION CENTRE', 'HARDWICKE STREET', 'PARKGATE STREET', 'DAME STREET', 'HEUSTON BRIDGE (SOUTH)', 'CATHAL BRUGHA STREET', 'SANDWITH STREET', 'BUCKINGHAM STREET LOWER', 'ROTHE ABBEY', 'CHARLEVILLE ROAD', \"PRINCES STREET / O'CONNELL STREET\", 'UPPER SHERRARD STREET', 'FITZWILLIAM SQUARE EAST', 'GRATTAN STREET', 'ST JAMES HOSPITAL (LUAS)', 'HARCOURT TERRACE', 'BOLTON STREET', 'JERVIS STREET', 'ORMOND QUAY UPPER', 'GRANGEGORMAN LOWER (SOUTH)', 'MOUNTJOY SQUARE WEST', 'WILTON TERRACE', 'EMMET ROAD', 'HEUSTON BRIDGE (NORTH)', 'LEINSTER STREET SOUTH', 'BLACKHALL PLACE', 'CLARENDON ROW', 'JAMES STREET EAST', 'PARNELL SQUARE NORTH', 'FOWNES STREET UPPER', 'SMITHFIELD', 'FRANCIS STREET'], 'latitude': [53.35023, 53.357841, 53.356307, 53.349562, 53.336021, 53.359405, 53.33796, 53.343368, 53.334123, 53.344304, 53.338755, 53.347777, 53.336074, 53.330091, 53.350929, 53.341515, 53.348279, 53.35893, 53.344115, 53.343893, 53.347477, 53.339005, 53.344153, 53.334295, 53.340803, 53.351464, 53.333653, 53.343105, 53.341428, 53.338614, 53.341833, 53.346637, 53.343034, 53.346867, 53.3547, 53.33403, 53.346026, 53.330662, 53.342113, 53.357043, 53.348875, 53.346874, 53.347932, 53.334432, 53.343565, 53.359624, 53.354929, 53.350974, 53.337132, 53.339218, 53.347122, 53.355173, 53.350291, 53.354845, 53.335742, 53.343653, 53.347884, 53.341288, 53.347508, 53.341805, 53.341645, 53.342296, 53.337757, 53.358115, 53.342638, 53.339434, 53.339334, 53.337494, 53.35561, 53.343897, 53.346985, 53.355954, 53.337824, 53.346603, 53.345922, 53.359246, 53.330362, 53.359967, 53.356769, 53.343456, 53.356717, 53.339764, 53.34744, 53.355473, 53.347972, 53.344007, 53.347106, 53.352149, 53.345203, 53.353331, 53.338776, 53.359157, 53.349013, 53.358437, 53.335211, 53.339629, 53.341359, 53.332763, 53.351182, 53.3483, 53.346057, 53.354663, 53.356299, 53.332383, 53.340714, 53.347802, 53.34218, 53.3488, 53.340927, 53.336597, 53.3537415547453, 53.344603, 53.347692, 53.342081], 'longitude': [-6.279696, -6.251557, -6.273717, -6.278198, -6.26298, -6.276142, -6.24153, -6.27012, -6.265436, -6.250427, -6.262003, -6.244239, -6.252825, -6.268044, -6.265125, -6.256853, -6.254662, -6.280337, -6.237153, -6.280531, -6.28525, -6.300217, -6.233451, -6.258503, -6.267732, -6.255265, -6.248345, -6.277167, -6.24672, -6.248606, -6.231291, -6.246154, -6.263578, -6.230852, -6.272314, -6.260714, -6.243576, -6.260177, -6.310015, -6.263232, -6.267459, -6.272976, -6.240928, -6.245575, -6.275071, -6.260348, -6.269425, -6.25294, -6.26059, -6.240642, -6.234749, -6.278424, -6.273507, -6.247579, -6.24551, -6.231755, -6.248048, -6.258117, -6.252192, -6.305085, -6.29719, -6.287661, -6.267699, -6.265601, -6.238695, -6.246548, -6.264699, -6.26199, -6.261397, -6.29706, -6.297804, -6.278378, -6.256035, -6.296924, -6.254614, -6.269779, -6.265163, -6.264828, -6.26814, -6.287409, -6.256359, -6.251988, -6.238523, -6.264423, -6.291804, -6.266802, -6.292041, -6.260533, -6.247163, -6.249319, -6.30395, -6.281866, -6.260311, -6.260641, -6.2509, -6.243778, -6.292951, -6.257942, -6.269859, -6.266651, -6.268001, -6.278681, -6.258586, -6.252717, -6.308191, -6.292432, -6.254485, -6.281637, -6.262501, -6.248109, -6.26530144781526, -6.263371, -6.278214, -6.275233], 'free_bikes': [11, 30, 22, 21, 5, 29, 3, 1, 16, 14, 0, 30, 2, 30, 2, 11, 16, 26, 8, 12, 10, 26, 2, 0, 4, 16, 2, 3, 9, 8, 21, 6, 0, 9, 2, 1, 3, 39, 34, 3, 11, 5, 7, 0, 2, 23, 2, 12, 8, 0, 8, 0, 0, 30, 1, 7, 7, 0, 8, 8, 17, 16, 8, 0, 8, 7, 7, 8, 9, 35, 36, 4, 0, 40, 12, 11, 28, 17, 3, 23, 16, 1, 3, 6, 37, 0, 23, 3, 19, 28, 27, 33, 0, 25, 0, 0, 30, 11, 13, 15, 9, 1, 22, 10, 28, 40, 18, 14, 0, 0, 2, 14, 22, 9], 'empty_slots': [29, 0, 18, 9, 28, 6, 37, 19, 13, 16, 32, 10, 28, 0, 18, 29, 14, 14, 32, 18, 28, 4, 38, 30, 16, 14, 38, 28, 26, 30, 9, 24, 24, 31, 28, 35, 37, 1, 6, 21, 18, 15, 32, 30, 27, 7, 38, 28, 32, 40, 32, 40, 30, 0, 39, 33, 23, 20, 12, 22, 5, 22, 32, 27, 32, 23, 33, 22, 11, 5, 4, 32, 40, 0, 8, 9, 2, 23, 17, 17, 24, 19, 37, 10, 1, 16, 2, 17, 21, 1, 8, 7, 23, 5, 40, 23, 10, 9, 7, 6, 20, 39, 8, 10, 2, 0, 12, 16, 31, 30, 18, 16, 8, 21]}\n"
      ]
     }
    ],
@@ -2178,13 +2178,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "114\n",
       "114\n",
       "114\n",
       "114\n",
@@ -2504,6 +2505,26 @@
     "lat_lon = bike_locations(bikes_df)\n",
     "\n",
     "%store lat_lon"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lat_lon_df = pd.DataFrame(lat_lon)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lat_lon_df.to_csv('../data/lat_lon.csv')\n",
+    "# remember that vscode runs code in the directory folder you have open\n",
+    "# if no path was provided, it would save the csv into module_2_python (or whatever the highest level folder you have open is)"
    ]
   },
   {
