created a more specific regression model for free bikes vs category count

--- a/notebooks/model_building.ipynb
+++ b/notebooks/model_building.ipynb
@@ -1989,6 +1989,117 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "We will redefine the model based on the categories with the lowest p-values (<0.5):\n",
+    "- numeric_variable\n",
+    "- bars\n",
+    "- Breakfast & Brunch\n",
+    "- Cafes\n",
+    "- Coffee & Tea\n",
+    "- Fast Food\n",
+    "- French\n",
+    "- Indian\n",
+    "- Irish\n",
+    "- Italian\n",
+    "- Pizza\n",
+    "- Pubs\n",
+    "- Salad\n",
+    "- Sandwiches\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                 Generalized Linear Model Regression Results                  \n",
+      "==============================================================================\n",
+      "Dep. Variable:        category_counts   No. Observations:                 2220\n",
+      "Model:                            GLM   Df Residuals:                     2205\n",
+      "Model Family:                 Poisson   Df Model:                           14\n",
+      "Link Function:                    Log   Scale:                          1.0000\n",
+      "Method:                          IRLS   Log-Likelihood:                -3207.6\n",
+      "Date:                Thu, 07 Sep 2023   Deviance:                       852.67\n",
+      "Time:                        17:54:09   Pearson chi2:                     889.\n",
+      "No. Iterations:                     5   Pseudo R-squ. (CS):             0.4395\n",
+      "Covariance Type:            nonrobust                                         \n",
+      "===========================================================================================================\n",
+      "                                              coef    std err          z      P>|z|      [0.025      0.975]\n",
+      "-----------------------------------------------------------------------------------------------------------\n",
+      "const                                       0.1009      0.037      2.761      0.006       0.029       0.172\n",
+      "numeric_variable                            0.0037      0.001      2.637      0.008       0.001       0.006\n",
+      "categorical_variable_Bars                   0.5309      0.082      6.438      0.000       0.369       0.693\n",
+      "categorical_variable_Breakfast & Brunch     0.2795      0.111      2.516      0.012       0.062       0.497\n",
+      "categorical_variable_Cafes                  1.0107      0.050     20.375      0.000       0.913       1.108\n",
+      "categorical_variable_Coffee & Tea           0.5822      0.069      8.425      0.000       0.447       0.718\n",
+      "categorical_variable_Fast Food              0.6739      0.069      9.717      0.000       0.538       0.810\n",
+      "categorical_variable_French                 0.3165      0.164      1.935      0.053      -0.004       0.637\n",
+      "categorical_variable_Indian                 0.3298      0.108      3.060      0.002       0.119       0.541\n",
+      "categorical_variable_Irish                  0.4222      0.095      4.450      0.000       0.236       0.608\n",
+      "categorical_variable_Italian                0.4328      0.084      5.132      0.000       0.268       0.598\n",
+      "categorical_variable_Pizza                  0.3117      0.103      3.026      0.002       0.110       0.514\n",
+      "categorical_variable_Pubs                   1.3244      0.041     32.222      0.000       1.244       1.405\n",
+      "categorical_variable_Salad                  0.3115      0.144      2.163      0.031       0.029       0.594\n",
+      "categorical_variable_Sandwiches             0.3052      0.106      2.885      0.004       0.098       0.513\n",
+      "===========================================================================================================\n"
+     ]
+    }
+   ],
+   "source": [
+    "# create a more specific regression model that can predict how many of each business category will likely be near a bike station \n",
+    "# depending on how many free bikes there are at the bike station\n",
+    "\n",
+    "# define variables\n",
+    "data = {\n",
+    "    'numeric_variable': rcnotnull_catcount['free_bikes'],\n",
+    "    'categorical_variable': rcnotnull_catcount['category'],\n",
+    "    'category_counts': rcnotnull_catcount['cat_count']\n",
+    "}\n",
+    "\n",
+    "# Create a DataFrame from the data\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# Encode the categorical variable using one-hot encoding\n",
+    "df = pd.get_dummies(df, columns=['categorical_variable'], drop_first=True)\n",
+    "\n",
+    "# Define the independent variables (including the encoded categorical variables)\n",
+    "specific_cats = [\n",
+    "    'categorical_variable_Bars',\n",
+    "    'categorical_variable_Breakfast & Brunch',\n",
+    "    'categorical_variable_Cafes',\n",
+    "    'categorical_variable_Coffee & Tea',\n",
+    "    'categorical_variable_Fast Food',\n",
+    "    'categorical_variable_French',\n",
+    "    'categorical_variable_Indian',\n",
+    "    'categorical_variable_Irish',\n",
+    "    'categorical_variable_Italian',\n",
+    "    'categorical_variable_Pizza',\n",
+    "    'categorical_variable_Pubs',\n",
+    "    'categorical_variable_Salad',\n",
+    "    'categorical_variable_Sandwiches']\n",
+    "\n",
+    "X = df[['numeric_variable'] + specific_cats]\n",
+    "\n",
+    "# Add a constant term (intercept)\n",
+    "X = sm.add_constant(X)\n",
+    "\n",
+    "# Define the dependent variable\n",
+    "y = df['category_counts']\n",
+    "\n",
+    "# Create and fit the Poisson regression model\n",
+    "model = sm.GLM(y, X, family=sm.families.Poisson()).fit()\n",
+    "\n",
+    "# Display model summary\n",
+    "print(model.summary())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Stretch"
    ]
   },
