Added some comments to notebooks; finished writing README

--- a/notebooks/yelp_foursquare_EDA.ipynb
+++ b/notebooks/yelp_foursquare_EDA.ipynb
@@ -1652,7 +1652,7 @@
     "    yelp_df['longitude'] = longitude \n",
     "    try:\n",
     "        yelp_df['category'] = yelp_df['categories'].map(lambda x: x[0].get('title')) # extract only the first category name from a venue's category info\n",
-    "    except IndexError as e:\n",
+    "    except IndexError as e: # skip coordinates that cause an IndexError\n",
     "        print(f\"{e}\")\n",
     "    #yelp_df = yelp_df.drop('categories', axis = 1) # remove the 'categories' column which contains a list of dictionaries\n",
     "    yelp_df_1 = yelp_df.filter(['distance','name','review_count','rating','latitude','longitude','category'], axis=1) # return only columns of interest\n",
@@ -1670,13 +1670,6 @@
    "outputs": [],
    "source": [
     "final_yelp_df.to_csv('../data/yelp_results.csv')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Trial snippets"
    ]
   },
   {
@@ -2579,6 +2572,227 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Get the top 10 restaurants according to their rating"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>review_count</th>\n",
+       "      <th>rating_avg</th>\n",
+       "      <th>distance_avg</th>\n",
+       "      <th>category</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>292</th>\n",
+       "      <td>Green Bench Café</td>\n",
+       "      <td>53.336021</td>\n",
+       "      <td>-6.262980</td>\n",
+       "      <td>101.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>86.864467</td>\n",
+       "      <td>Salad</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>548</th>\n",
+       "      <td>Fish Shop</td>\n",
+       "      <td>53.347477</td>\n",
+       "      <td>-6.285250</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>219.511391</td>\n",
+       "      <td>Fish &amp; Chips</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>762</th>\n",
+       "      <td>Hacienda Bar</td>\n",
+       "      <td>53.346874</td>\n",
+       "      <td>-6.272976</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>238.464066</td>\n",
+       "      <td>Pubs</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>837</th>\n",
+       "      <td>Harkin's</td>\n",
+       "      <td>53.341645</td>\n",
+       "      <td>-6.297190</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>583.951089</td>\n",
+       "      <td>Pubs</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>889</th>\n",
+       "      <td>The Lord Mayor's Lounge</td>\n",
+       "      <td>53.337824</td>\n",
+       "      <td>-6.256035</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>112.243387</td>\n",
+       "      <td>Lounges</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>272</th>\n",
+       "      <td>DELISUZ</td>\n",
+       "      <td>53.356307</td>\n",
+       "      <td>-6.273717</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>392.901777</td>\n",
+       "      <td>Breakfast &amp; Brunch</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1014</th>\n",
+       "      <td>Forest &amp; Marcy</td>\n",
+       "      <td>53.332383</td>\n",
+       "      <td>-6.252717</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>250.985016</td>\n",
+       "      <td>Wine Bars</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>505</th>\n",
+       "      <td>The Piper's Corner</td>\n",
+       "      <td>53.348279</td>\n",
+       "      <td>-6.254662</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>231.989691</td>\n",
+       "      <td>Pubs</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>840</th>\n",
+       "      <td>Groundstate</td>\n",
+       "      <td>53.341645</td>\n",
+       "      <td>-6.297190</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>612.849265</td>\n",
+       "      <td>Coffee &amp; Tea</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>852</th>\n",
+       "      <td>Assassination Custard</td>\n",
+       "      <td>53.337757</td>\n",
+       "      <td>-6.267699</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>139.779619</td>\n",
+       "      <td>Cafes</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         name   latitude  longitude  review_count  rating_avg  \\\n",
+       "292          Green Bench Café  53.336021  -6.262980         101.0         5.0   \n",
+       "548                 Fish Shop  53.347477  -6.285250          33.0         5.0   \n",
+       "762              Hacienda Bar  53.346874  -6.272976          24.0         5.0   \n",
+       "837                  Harkin's  53.341645  -6.297190          17.0         5.0   \n",
+       "889   The Lord Mayor's Lounge  53.337824  -6.256035          11.0         5.0   \n",
+       "272                   DELISUZ  53.356307  -6.273717           8.0         5.0   \n",
+       "1014           Forest & Marcy  53.332383  -6.252717           8.0         5.0   \n",
+       "505        The Piper's Corner  53.348279  -6.254662           7.0         5.0   \n",
+       "840               Groundstate  53.341645  -6.297190           6.0         5.0   \n",
+       "852     Assassination Custard  53.337757  -6.267699           6.0         5.0   \n",
+       "\n",
+       "      distance_avg            category  \n",
+       "292      86.864467               Salad  \n",
+       "548     219.511391        Fish & Chips  \n",
+       "762     238.464066                Pubs  \n",
+       "837     583.951089                Pubs  \n",
+       "889     112.243387             Lounges  \n",
+       "272     392.901777  Breakfast & Brunch  \n",
+       "1014    250.985016           Wine Bars  \n",
+       "505     231.989691                Pubs  \n",
+       "840     612.849265        Coffee & Tea  \n",
+       "852     139.779619               Cafes  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "restaurants = pd.read_csv('../data/merged_clean_results.csv') # import merged results as a dataframe\n",
+    "restaurants = restaurants.drop(columns=restaurants.columns[0], axis=1) # remove duplicate index\n",
+    "restaurants_unique = restaurants.drop_duplicates(\n",
+    "    subset = ['name'],\n",
+    "    keep = 'first').reset_index(drop = True) # drop duplicate restaurants\n",
+    "restaurants_unique = restaurants_unique.loc[restaurants_unique['category'] != 'Tours'] # remove top result that was not a restaurant\n",
+    "\n",
+    "restaurants_unique.sort_values(by=['rating_avg','review_count'], ascending=False).head(10) # sort dataframe by highest rating, then by highest number of reviews\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Comparing Results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Which API provided you with more complete data? Provide an explanation. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The Yelp API had a larger number of results (almost double) than the Foursquare API, and included elements such as number of reviews.\n",
+    "The Foursquare API offered a wider variety of parameters that were not related to food and beverage services, but this would also mean that rating and review information would be less useful (since locations such as bus stops are unlikely to have ratings and reviews).\n",
+    "\n",
+    "Both APIs had reasonably low levels of null values. Most null values occurred when merging the results from the two APIs."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Trial snippets"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -3149,39 +3363,6 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Comparing Results"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Which API provided you with more complete data? Provide an explanation. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Get the top 10 restaurants according to their rating"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
